--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link
     href="https://fonts.googleapis.com/css?family=Roboto:400,700|Open+Sans"
     rel="stylesheet">
+    <link rel="icon" type="image/png" href="./assets/ABLogoTab.png">
   </head>
   <body>
     <div id="root"></div>
